--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">RunBuddy</string>
     <string name="title_analytics_feature">Analytics</string>
+    <string name="error_couldnt_load_module">Couldn\'t load module</string>
+    <string name="error_installation_failed">Installation failed</string>
+    <string name="analytics_installed">Intalled Analytics successfully</string>
+    <string name="installing_module">Installing module</string>
 </resources>
